Docker_kubernetes/Part7/despliegue-azure/backend1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1
  labels:
    app: backend1-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend1-app
  template:
    metadata:
      labels:
        app: backend1-app
    spec:
      containers:
        - name: backend1-container
          image: group05.azurecr.io/backend1
          resources:
            limits:
              memory: "50Mi"
              cpu: "100m"
          ports:
            - containerPort: 3100
