Docker_kubernetes/Part7/despliegue-azure/backend2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend2-svc
spec:
  type: NodePort
  selector:
    app: backend2-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3200
