Docker_kubernetes/Part7/despliegue-azure/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  backend:
    serviceName: frontend-svc
    servicePort: 80
  rules:
    - http:
        paths:
          - path: /(.*)
            backend:
              serviceName: frontend-svc
              servicePort: 80
          - path: /api/config
            backend:
              serviceName: frontend-svc
              servicePort: 80
          - path: /api/message
            backend:
              serviceName: backend1-svc
              servicePort: 80
